[package]
name = "codecrafters-git"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
clap = { version = "4.6.1", features = ["derive"] }
flate2 = { version = "1.0.34", features = ["zlib-rs"] }                                # compression
thiserror = "1.0.38"                             # error handling
clap_derive = { version = "4.0.0-rc.1" }
